# platform-engineering

./: .editorconfig  .gitignore  .markdownlint.json  .mdl.json  .mdl.rb  README.md  code-of-conduct.md  contributing.md  prettier.config.js
.devcontainer/: devcontainer.json
.github/workflows/: documentation.yaml  linters.yaml
config/lint/: .editorconfig-checker.json  .eslintrc.json  .golangci.yml  .markdown-lint.yaml  .protolint.yaml  .yaml-lint.yml  gitleaks.toml  python-lint.rc  super-linter-fix-mode.env  super-linter.env
config/mkdocs/: mkdocs.yaml
docs/: 404.html  index.html  sitemap.xml
docs/code-of-conduct/: index.html
docs/contributing/: index.html
docs/search/: search_index.json
docs/stylesheets/: extra.css
google-cloud-backstage-plugins/cloudworkstations/: .eslintrc.js  .gitignore  README.md  catalog-info.yaml  package.json  tsconfig.json
reference-architectures/accelerating-migrations/: README.md
reference-architectures/automated-password-rotation/: README.md
reference-architectures/backstage/: .markdownlint.json  README.md
reference-architectures/cloud_deploy_flow/: .terraform.lock.hcl  README.md  deploy.tf  functions.tf  main.tf  variables.tf
reference-architectures/gemini-powered-migration-blocker-analysis/: README.md  (+5 more)
reference-architectures/gemini-powered-migration-blocker-analysis/backend/: .dockerignore  Dockerfile  README.md  gcp_utils.py  gemini_utils.py  github_utils.py  main.py  models.py  plat-md.md  prompt_template.md  prompt_template.md.orig  pyproject.toml  requirements.txt
scripts/: common.sh  lint.sh  run-mkdocs.sh
(+287 files in other folders)
