[project]
name = "gemini-platform-assesment-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "gitpython>=3.1.44",
    "google-cloud-aiplatform>=1.90.0",
    "google-cloud-firestore>=2.20.2",
    "google-cloud-storage>=2.19.0",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
]
